<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DrawerLayout</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">add</string>
    <string name="action_edit">edit</string>
    <string name="action_del">del</string>
    <string name="action_search">search</string>
    <string name="action_help">help</string>
    <string name="action_more">more</string>
    <string name="action_about">about</string>
    <string name="action_share">share</string>
    <string name="fragment_one_tv1">this is fragment one</string>
    <string name="fragment_two_tv1">this is fragment two</string>

</resources>
