<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.drawerlayout.MainActivity" >
    
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/search"/>
    
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/action_more"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/more">
        
        <menu>
            
            <item
		        android:id="@+id/action_edit"
		        android:orderInCategory="100"
		        android:title="@string/action_edit"
		        app:showAsAction="ifRoom|withText"/>
            
            <item
		        android:id="@+id/action_del"
		        android:orderInCategory="100"
		        android:title="@string/action_del"
		        app:showAsAction="ifRoom|withText"/>
    
		    <item
		        android:id="@+id/action_add"
		        android:orderInCategory="100"
		        android:title="@string/action_add"
		        app:showAsAction="ifRoom|withText"/>
		    
		    <item
		        android:id="@+id/action_help"
		        android:orderInCategory="100"
		        android:title="@string/action_help"
		        app:showAsAction="ifRoom|withText"/>
		    
		    <item
		        android:id="@+id/action_about"
		        android:orderInCategory="100"
		        android:title="@string/action_about"
		        app:showAsAction="ifRoom|withText"/>
        </menu>
    </item>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
